--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
   <div id="shim">shim for font face</div>
 
-  <h1>HTML5 Pacman</h1>
+  <h1>Pacman 1988</h1>
 
   <a href="http://arandomurl.com/">Writeup</a> |
   Code on <a href="http://arandomurl.com/">Github</a>
