--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HTML5 Pacman</title>
+    <title>Namco - 1980 PACMAN</title>
     
     <style type="text/css">
       @font-face {
